[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/miscellaneous sprites/bomb_thrown_anim_strip_3.png" type="Texture" id=1]
[ext_resource path="res://Environment/Bomb.gd" type="Script" id=2]
[ext_resource path="res://Effects/Explosion.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=3]
friction = 0.3
bounce = 0.4

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 7, 7 )

[sub_resource type="Animation" id=1]
resource_name = "animation"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 3 )

[node name="Bomb" type="RigidBody2D"]
collision_layer = 0
collision_mask = 2
physics_material_override = SubResource( 3 )
linear_velocity = Vector2( 0, -40 )
script = ExtResource( 2 )
explodeEffect = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -1 )
texture = ExtResource( 1 )
hframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "animation"
anims/animation = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="TimeToExplode" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="EffectPosition" type="Position2D" parent="."]
position = Vector2( 0, -13 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="TimeToExplode" to="." method="_on_TimeToExplode_timeout"]
